# drone-recon-pipeline

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
src/: gps_embed.h  gui.cpp  gui.h  main.cpp  pipeline.cpp  pipeline.h
